# NF-e

./: .gitignore  README.md  nfe_reader.py  pyproject.toml
nfe_reader/: __init__.py  cli.py  exporter.py  parser.py
nfe_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: sample_nfe.xml  test_exporter.py  test_nfe_reader.py  test_parser.py
tests/fixtures/: sample_nfe.xml
